--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<span>Plié</span>
 						</a>
 						<div class="lb-overlay" id="image-3">
-							<img src="images/full/C10003.JPG" alt="image03" />
+							<img src="images/full/C10003.jpg" alt="image03" />
 							<div>							
 								<h3>pli·é <span>/plēˈā/</h3>
 								<p>A movement in which a dancer bends the knees and straightens them again</p>
@@ -76,11 +76,11 @@
 					</li>
 					<li>
 						<a href="#image-4">
-							<img src="images/thumbs/C10004.JPG" alt="image04">
+							<img src="images/thumbs/C10004.jpg" alt="image04">
 							<span>Adagio</span>
 						</a>
 						<div class="lb-overlay" id="image-4">
-							<img src="images/full/C10004.JPG" alt="image04" />
+							<img src="images/full/C10004.jpg" alt="image04" />
 							<div>							
 								<h3>a·da·gio <span>/əˈdäjō/</h3>
 								<p>A movement or composition marked to be played adagio</p>
@@ -90,11 +90,11 @@
 					</li>
 					<li>
 						<a href="#image-5">
-							<img src="images/thumbs/C10005.JPG" alt="image05">
+							<img src="images/thumbs/C10005.jpg" alt="image05">
 							<span>Frappé</span>
 						</a>
 						<div class="lb-overlay" id="image-5">
-							<img src="images/full/C10005.JPG" alt="image05" />
+							<img src="images/full/C10005.jpg" alt="image05" />
 							<div>							
 								<h3>frap·pé<span>/fraˈpā/</h3>
 								<p>Involving a beating action of the toe of one foot against the ankle of the supporting leg</p>
@@ -104,11 +104,11 @@
 					</li>
 					<li>
 						<a href="#image-6">
-							<img src="images/thumbs/C10006.JPG" alt="image06">
+							<img src="images/thumbs/C10006.jpg" alt="image06">
 							<span>Glissade</span>
 						</a>
 						<div class="lb-overlay" id="image-6">
-							<img src="images/full/C10006.JPG" alt="image06" />
+							<img src="images/full/C10006.jpg" alt="image06" />
 							<div>							
 								<h3>glis·sade <span>/gliˈsäd/</h3>
 								<p>One leg is brushed outward from the body, which then takes the weight while the second leg is brushed in to meet it</p>
@@ -118,11 +118,11 @@
 					</li>
 					<li>
 						<a href="#image-7">
-							<img src="images/thumbs/C10007.JPG" alt="image07">
+							<img src="images/thumbs/C10007.jpg" alt="image07">
 							<span>Jeté</span>
 						</a>
 						<div class="lb-overlay" id="image-7">
-							<img src="images/full/C10007.JPG" alt="image07" />
+							<img src="images/full/C10007.jpg" alt="image07" />
 							<div>							
 								<h3>je·té <span>/zhə-ˈtā/</h3>
 								<p>A springing jump made from one foot to the other in any direction</p>
@@ -136,7 +136,7 @@
 							<span>Piqué</span>
 						</a>
 						<div class="lb-overlay" id="image-8">
-							<img src="images/full/C10008.JPG" alt="image08" />
+							<img src="images/full/C10008.jpg" alt="image08" />
 							<div>							
 								<h3>pi·qué <span>/pēˈkā/</h3>
 								<p>Strongly pointed toe of the lifted and extended leg sharply lowers to hit the floor then immediately rebounds upward</p>
