--- a/index2.html
+++ b/index2.html
@@ -47,11 +47,11 @@
 					</li>
 					<li>
 						<a href="#image-2">
-							<img src="images/thumbs/C20102.JPG" alt="image02">
+							<img src="images/thumbs/C20102.jpg" alt="image02">
 							<span>Port de bras</span>
 						</a>
 						<div class="lb-overlay" id="image-2">
-							<img src="images/full/C20102.JPG" alt="image02" />
+							<img src="images/full/C20102.jpg" alt="image02" />
 							<div>							
 								<h3>port de bras <span>/ˌpôr də ˈbrä/</h3>
 								<p>An exercise designed to develop graceful movement and disposition of the arms</p>
@@ -61,11 +61,11 @@
 					</li>
 					<li>
 						<a href="#image-3">
-							<img src="images/thumbs/C20103.JPG" alt="image03">
+							<img src="images/thumbs/C20103.jpg" alt="image03">
 							<span>Plié</span>
 						</a>
 						<div class="lb-overlay" id="image-3">
-							<img src="images/full/C20103.JPG" alt="image03" />
+							<img src="images/full/C20103.jpg" alt="image03" />
 							<div>							
 								<h3>pli·é <span>/plēˈā/</h3>
 								<p>A movement in which a dancer bends the knees and straightens them again</p>
@@ -75,11 +75,11 @@
 					</li>
 					<li>
 						<a href="#image-4">
-							<img src="images/thumbs/C20104.JPG" alt="image04">
+							<img src="images/thumbs/C20104.jpg" alt="image04">
 							<span>Adagio</span>
 						</a>
 						<div class="lb-overlay" id="image-4">
-							<img src="images/full/C20104.JPG" alt="image04" />
+							<img src="images/full/C20104.jpg" alt="image04" />
 							<div>							
 								<h3>a·da·gio <span>/əˈdäjō/</h3>
 								<p>A movement or composition marked to be played adagio</p>
@@ -89,11 +89,11 @@
 					</li>
 					<li>
 						<a href="#image-5">
-							<img src="images/thumbs/C20105.JPG" alt="image05">
+							<img src="images/thumbs/C20105.jpg" alt="image05">
 							<span>Frappé</span>
 						</a>
 						<div class="lb-overlay" id="image-5">
-							<img src="images/full/C20105.JPG" alt="image05" />
+							<img src="images/full/C20105.jpg" alt="image05" />
 							<div>							
 								<h3>frap·pé<span>/fraˈpā/</h3>
 								<p>Involving a beating action of the toe of one foot against the ankle of the supporting leg</p>
@@ -117,11 +117,11 @@
 					</li>
 					<li>
 						<a href="#image-7">
-							<img src="images/thumbs/C20202.JPG" alt="image07">
+							<img src="images/thumbs/C20202.jpg" alt="image07">
 							<span>Jeté</span>
 						</a>
 						<div class="lb-overlay" id="image-7">
-							<img src="images/full/C20202.JPG" alt="image07" />
+							<img src="images/full/C20202.jpg" alt="image07" />
 							<div>							
 								<h3>je·té <span>/zhə-ˈtā/</h3>
 								<p>A springing jump made from one foot to the other in any direction</p>
@@ -131,11 +131,11 @@
 					</li>
 					<li>
 						<a href="#image-8">
-							<img src="images/thumbs/C20203.JPG" alt="image08">
+							<img src="images/thumbs/C20203.jpg" alt="image08">
 							<span>Piqué</span>
 						</a>
 						<div class="lb-overlay" id="image-8">
-							<img src="images/full/C20203.JPG" alt="image08" />
+							<img src="images/full/C20203.jpg" alt="image08" />
 							<div>							
 								<h3>pi·qué <span>/pēˈkā/</h3>
 								<p>Strongly pointed toe of the lifted and extended leg sharply lowers to hit the floor then immediately rebounds upward</p>
@@ -145,11 +145,11 @@
 					</li>
 					<li>
 						<a href="#image-9">
-							<img src="images/thumbs/C20204.JPG" alt="image09">
+							<img src="images/thumbs/C20204.jpg" alt="image09">
 							<span>Arabesque</span>
 						</a>
 						<div class="lb-overlay" id="image-9">
-							<img src="images/full/C20204.JPG" alt="image09" />
+							<img src="images/full/C20204.jpg" alt="image09" />
 							<div>							
 								<h3>ar·a·besque <span>/ˌarəˈbesk/</h3>
 								<p>Position of the body supported on one leg, with the other leg extended behind the body with the knee straight</p>
@@ -159,11 +159,11 @@
 					</li>
 					<li>
 						<a href="#image-10">
-							<img src="images/thumbs/C20205.JPG" alt="image10">
+							<img src="images/thumbs/C20205.jpg" alt="image10">
 							<span>Ballerina</span>
 						</a>
 						<div class="lb-overlay" id="image-10">
-							<img src="images/full/C20205.JPG" alt="image10" />
+							<img src="images/full/C20205.jpg" alt="image10" />
 							<div>							
 								<h3>bal·le·ri·na <span>/ˌbaləˈrēnə/</h3>
 								<p>A female ballet dancer</p>
